// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel renders 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <div
    className="sc-fAjPcg jQuFRT"
  >
    <div
      className="sc-jSNUkj gbLBgo"
    >
      <ul
        className="sc-gaqsZu sc-jPVYhN frcLkQ XLPJs"
      >
        <li
          className="sc-fXywWY jQsgsl"
        >
          <div
            className="sc-cbFqep gwWYwm"
          >
            0
          </div>
        </li>
        <li
          className="sc-fXywWY jQsgsl"
        >
          <div
            className="sc-cbFqep gwWYwm"
          >
            1
          </div>
        </li>
        <li
          className="sc-fXywWY jQsgsl"
        >
          <div
            className="sc-cbFqep gwWYwm"
          >
            2
          </div>
        </li>
        <li
          className="sc-fXywWY jQsgsl"
        >
          <div
            className="sc-cbFqep gwWYwm"
          >
            3
          </div>
        </li>
        <li
          className="sc-fXywWY jQsgsl"
        >
          <div
            className="sc-cbFqep gwWYwm"
          >
            4
          </div>
        </li>
        <li
          className="sc-fXywWY jQsgsl"
        >
          <div
            className="sc-cbFqep gwWYwm"
          >
            5
          </div>
        </li>
        <li
          className="sc-fXywWY jQsgsl"
        >
          <div
            className="sc-cbFqep gwWYwm"
          >
            6
          </div>
        </li>
        <li
          className="sc-fXywWY jQsgsl"
        >
          <div
            className="sc-cbFqep gwWYwm"
          >
            7
          </div>
        </li>
        <li
          className="sc-fXywWY jQsgsl"
        >
          <div
            className="sc-cbFqep gwWYwm"
          >
            8
          </div>
        </li>
        <li
          className="sc-fXywWY jQsgsl"
        >
          <div
            className="sc-cbFqep gwWYwm"
          >
            9
          </div>
        </li>
        <li
          className="sc-fXywWY jQsgsl"
        >
          <div
            className="sc-cbFqep gwWYwm"
          >
            10
          </div>
        </li>
        <li
          className="sc-fXywWY jQsgsl"
        >
          <div
            className="sc-cbFqep gwWYwm"
          >
            11
          </div>
        </li>
        <li
          className="sc-fXywWY jQsgsl"
        >
          <div
            className="sc-cbFqep gwWYwm"
          >
            12
          </div>
        </li>
        <li
          className="sc-fXywWY jQsgsl"
        >
          <div
            className="sc-cbFqep gwWYwm"
          >
            13
          </div>
        </li>
        <li
          className="sc-fXywWY jQsgsl"
        >
          <div
            className="sc-cbFqep gwWYwm"
          >
            14
          </div>
        </li>
        <li
          className="sc-fXywWY jQsgsl"
        >
          <div
            className="sc-cbFqep gwWYwm"
          >
            15
          </div>
        </li>
        <li
          className="sc-fXywWY jQsgsl"
        >
          <div
            className="sc-cbFqep gwWYwm"
          >
            16
          </div>
        </li>
        <li
          className="sc-fXywWY jQsgsl"
        >
          <div
            className="sc-cbFqep gwWYwm"
          >
            17
          </div>
        </li>
        <li
          className="sc-fXywWY jQsgsl"
        >
          <div
            className="sc-cbFqep gwWYwm"
          >
            18
          </div>
        </li>
        <li
          className="sc-fXywWY jQsgsl"
        >
          <div
            className="sc-cbFqep gwWYwm"
          >
            19
          </div>
        </li>
        <li
          className="sc-fXywWY jQsgsl"
        >
          <div
            className="sc-cbFqep gwWYwm"
          >
            20
          </div>
        </li>
        <li
          className="sc-fXywWY jQsgsl"
        >
          <div
            className="sc-cbFqep gwWYwm"
          >
            21
          </div>
        </li>
        <li
          className="sc-fXywWY jQsgsl"
        >
          <div
            className="sc-cbFqep gwWYwm"
          >
            22
          </div>
        </li>
        <li
          className="sc-fXywWY jQsgsl"
        >
          <div
            className="sc-cbFqep gwWYwm"
          >
            23
          </div>
        </li>
        <li
          className="sc-fXywWY jQsgsl"
        >
          <div
            className="sc-cbFqep gwWYwm"
          >
            24
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Carousel renders RTL 1`] = `
<div
  dir="rtl"
>
  <div
    className="flex justify-around items-center w-full"
  >
    <div
      className="sc-lXfUi jrveow"
    >
      <div
        className="sc-jSNUkj gbLBgo"
      >
        <ul
          className="sc-gaqsZu sc-jPVYhN frcLkQ XLPJs"
        >
          <li
            className="sc-fXywWY jQsgsl"
          >
            <div
              className="sc-icOqvn cyySLh"
            >
              24
            </div>
          </li>
          <li
            className="sc-fXywWY jQsgsl"
          >
            <div
              className="sc-icOqvn cyySLh"
            >
              23
            </div>
          </li>
          <li
            className="sc-fXywWY jQsgsl"
          >
            <div
              className="sc-icOqvn cyySLh"
            >
              22
            </div>
          </li>
          <li
            className="sc-fXywWY jQsgsl"
          >
            <div
              className="sc-icOqvn cyySLh"
            >
              21
            </div>
          </li>
          <li
            className="sc-fXywWY jQsgsl"
          >
            <div
              className="sc-icOqvn cyySLh"
            >
              20
            </div>
          </li>
          <li
            className="sc-fXywWY jQsgsl"
          >
            <div
              className="sc-icOqvn cyySLh"
            >
              19
            </div>
          </li>
          <li
            className="sc-fXywWY jQsgsl"
          >
            <div
              className="sc-icOqvn cyySLh"
            >
              18
            </div>
          </li>
          <li
            className="sc-fXywWY jQsgsl"
          >
            <div
              className="sc-icOqvn cyySLh"
            >
              17
            </div>
          </li>
          <li
            className="sc-fXywWY jQsgsl"
          >
            <div
              className="sc-icOqvn cyySLh"
            >
              16
            </div>
          </li>
          <li
            className="sc-fXywWY jQsgsl"
          >
            <div
              className="sc-icOqvn cyySLh"
            >
              15
            </div>
          </li>
          <li
            className="sc-fXywWY jQsgsl"
          >
            <div
              className="sc-icOqvn cyySLh"
            >
              14
            </div>
          </li>
          <li
            className="sc-fXywWY jQsgsl"
          >
            <div
              className="sc-icOqvn cyySLh"
            >
              13
            </div>
          </li>
          <li
            className="sc-fXywWY jQsgsl"
          >
            <div
              className="sc-icOqvn cyySLh"
            >
              12
            </div>
          </li>
          <li
            className="sc-fXywWY jQsgsl"
          >
            <div
              className="sc-icOqvn cyySLh"
            >
              11
            </div>
          </li>
          <li
            className="sc-fXywWY jQsgsl"
          >
            <div
              className="sc-icOqvn cyySLh"
            >
              10
            </div>
          </li>
          <li
            className="sc-fXywWY jQsgsl"
          >
            <div
              className="sc-icOqvn cyySLh"
            >
              9
            </div>
          </li>
          <li
            className="sc-fXywWY jQsgsl"
          >
            <div
              className="sc-icOqvn cyySLh"
            >
              8
            </div>
          </li>
          <li
            className="sc-fXywWY jQsgsl"
          >
            <div
              className="sc-icOqvn cyySLh"
            >
              7
            </div>
          </li>
          <li
            className="sc-fXywWY jQsgsl"
          >
            <div
              className="sc-icOqvn cyySLh"
            >
              6
            </div>
          </li>
          <li
            className="sc-fXywWY jQsgsl"
          >
            <div
              className="sc-icOqvn cyySLh"
            >
              5
            </div>
          </li>
          <li
            className="sc-fXywWY jQsgsl"
          >
            <div
              className="sc-icOqvn cyySLh"
            >
              4
            </div>
          </li>
          <li
            className="sc-fXywWY jQsgsl"
          >
            <div
              className="sc-icOqvn cyySLh"
            >
              3
            </div>
          </li>
          <li
            className="sc-fXywWY jQsgsl"
          >
            <div
              className="sc-icOqvn cyySLh"
            >
              2
            </div>
          </li>
          <li
            className="sc-fXywWY jQsgsl"
          >
            <div
              className="sc-icOqvn cyySLh"
            >
              1
            </div>
          </li>
          <li
            className="sc-fXywWY jQsgsl"
          >
            <div
              className="sc-icOqvn cyySLh"
            >
              0
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel renders visible index 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <div
    className="sc-jSNUkj gbLBgo"
  >
    <ul
      className="sc-gaqsZu sc-jPVYhN eeBMkY XLPJs"
    >
      <li
        className="sc-fXywWY jQsgsl"
      >
        <div
          className="sc-hySdjw fQjQpI"
        >
          -1
          , 
          -1
        </div>
      </li>
      <li
        className="sc-fXywWY jQsgsl"
      >
        <div
          className="sc-hySdjw fQjQpI"
        >
          -1
          , 
          -1
        </div>
      </li>
      <li
        className="sc-fXywWY jQsgsl"
      >
        <div
          className="sc-hySdjw fQjQpI"
        >
          -1
          , 
          -1
        </div>
      </li>
      <li
        className="sc-fXywWY jQsgsl"
      >
        <div
          className="sc-hySdjw fQjQpI"
        >
          -1
          , 
          -1
        </div>
      </li>
      <li
        className="sc-fXywWY jQsgsl"
      >
        <div
          className="sc-hySdjw fQjQpI"
        >
          -1
          , 
          -1
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Carousel renders with Customized Arrows 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <div
    className="sc-jSNUkj gbLBgo"
  >
    <button
      disabled={true}
      onClick={[Function]}
    >
      Scroll to left
    </button>
    <ul
      className="sc-gaqsZu sc-jPVYhN frcLkQ XLPJs"
    >
      <li
        className="sc-fXywWY jQsgsl"
      >
        <div
          className="sc-bWIbvL ffeErD"
        >
          0
        </div>
      </li>
      <li
        className="sc-fXywWY jQsgsl"
      >
        <div
          className="sc-bWIbvL ffeErD"
        >
          1
        </div>
      </li>
      <li
        className="sc-fXywWY jQsgsl"
      >
        <div
          className="sc-bWIbvL ffeErD"
        >
          2
        </div>
      </li>
      <li
        className="sc-fXywWY jQsgsl"
      >
        <div
          className="sc-bWIbvL ffeErD"
        >
          3
        </div>
      </li>
      <li
        className="sc-fXywWY jQsgsl"
      >
        <div
          className="sc-bWIbvL ffeErD"
        >
          4
        </div>
      </li>
      <li
        className="sc-fXywWY jQsgsl"
      >
        <div
          className="sc-bWIbvL ffeErD"
        >
          5
        </div>
      </li>
      <li
        className="sc-fXywWY jQsgsl"
      >
        <div
          className="sc-bWIbvL ffeErD"
        >
          6
        </div>
      </li>
      <li
        className="sc-fXywWY jQsgsl"
      >
        <div
          className="sc-bWIbvL ffeErD"
        >
          7
        </div>
      </li>
      <li
        className="sc-fXywWY jQsgsl"
      >
        <div
          className="sc-bWIbvL ffeErD"
        >
          8
        </div>
      </li>
      <li
        className="sc-fXywWY jQsgsl"
      >
        <div
          className="sc-bWIbvL ffeErD"
        >
          9
        </div>
      </li>
      <li
        className="sc-fXywWY jQsgsl"
      >
        <div
          className="sc-bWIbvL ffeErD"
        >
          10
        </div>
      </li>
      <li
        className="sc-fXywWY jQsgsl"
      >
        <div
          className="sc-bWIbvL ffeErD"
        >
          11
        </div>
      </li>
      <li
        className="sc-fXywWY jQsgsl"
      >
        <div
          className="sc-bWIbvL ffeErD"
        >
          12
        </div>
      </li>
      <li
        className="sc-fXywWY jQsgsl"
      >
        <div
          className="sc-bWIbvL ffeErD"
        >
          13
        </div>
      </li>
      <li
        className="sc-fXywWY jQsgsl"
      >
        <div
          className="sc-bWIbvL ffeErD"
        >
          14
        </div>
      </li>
      <li
        className="sc-fXywWY jQsgsl"
      >
        <div
          className="sc-bWIbvL ffeErD"
        >
          15
        </div>
      </li>
      <li
        className="sc-fXywWY jQsgsl"
      >
        <div
          className="sc-bWIbvL ffeErD"
        >
          16
        </div>
      </li>
      <li
        className="sc-fXywWY jQsgsl"
      >
        <div
          className="sc-bWIbvL ffeErD"
        >
          17
        </div>
      </li>
      <li
        className="sc-fXywWY jQsgsl"
      >
        <div
          className="sc-bWIbvL ffeErD"
        >
          18
        </div>
      </li>
      <li
        className="sc-fXywWY jQsgsl"
      >
        <div
          className="sc-bWIbvL ffeErD"
        >
          19
        </div>
      </li>
      <li
        className="sc-fXywWY jQsgsl"
      >
        <div
          className="sc-bWIbvL ffeErD"
        >
          20
        </div>
      </li>
      <li
        className="sc-fXywWY jQsgsl"
      >
        <div
          className="sc-bWIbvL ffeErD"
        >
          21
        </div>
      </li>
      <li
        className="sc-fXywWY jQsgsl"
      >
        <div
          className="sc-bWIbvL ffeErD"
        >
          22
        </div>
      </li>
      <li
        className="sc-fXywWY jQsgsl"
      >
        <div
          className="sc-bWIbvL ffeErD"
        >
          23
        </div>
      </li>
      <li
        className="sc-fXywWY jQsgsl"
      >
        <div
          className="sc-bWIbvL ffeErD"
        >
          24
        </div>
      </li>
    </ul>
    <button
      disabled={true}
      onClick={[Function]}
    >
      Scroll to Right
    </button>
  </div>
</div>
`;

exports[`Carousel renders with different Space 1`] = `
<div
  className="flex justify-around items-center w-full"
>
  <div
    className="sc-jSNUkj gbLBgo"
  >
    <ul
      className="sc-gaqsZu sc-jPVYhN eeBMkY XLPJs"
    >
      <li
        className="sc-fXywWY jQsgsl"
      >
        <div
          className="sc-hoyuhS gnmbrH"
        >
          0
        </div>
      </li>
      <li
        className="sc-fXywWY jQsgsl"
      >
        <div
          className="sc-hoyuhS gnmbrH"
        >
          1
        </div>
      </li>
      <li
        className="sc-fXywWY jQsgsl"
      >
        <div
          className="sc-hoyuhS gnmbrH"
        >
          2
        </div>
      </li>
      <li
        className="sc-fXywWY jQsgsl"
      >
        <div
          className="sc-hoyuhS gnmbrH"
        >
          3
        </div>
      </li>
      <li
        className="sc-fXywWY jQsgsl"
      >
        <div
          className="sc-hoyuhS gnmbrH"
        >
          4
        </div>
      </li>
    </ul>
  </div>
</div>
`;
